<resources>
    <string name="app_name">Teacher\'s Helper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject_rus">Предметы</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="Name_ozenka">Оценки</string>
    <string name="Description_ozenka">Оценка</string>
    <string name="Main_screen">Главная</string>
    <string name="Name_subject">Предметы</string>
    <string name="name_math">Математика</string>
    <string name="name_rus">Русский язык</string>
    <string name="name_kit">Китайский язык</string>
    <string name="name_obzr">ОБиЗР</string>
    <string name="name_lit">Литература</string>
    <string name="name_nem">Немецкий язык</string>
    <string name="name_geo">География</string>
    <string name="name_infor">Информатика</string>
    <string name="name_bio">Биология</string>
    <string name="name_fisika">Физика</string>
    <string name="name_obsh">Обществознание</string>
    <string name="name_history">История</string>
    <string name="name_chemistry">Химия</string>
    <string name="name_mark">Оценки</string>
    <string name="reg_vxod_kringe">Вход</string>
    <string name="log_bykvi">Введите логин</string>
    <string name="parol">Введите пароль</string>
    <string name="otmena">ОТМЕНА</string>
    <string name="ok">ОК</string>
    <string name="Settings">Настройки</string>
    <string name="Confidenshial">Конфиденциальность</string>
    <string name="Change_image">Изменить фото</string>
    <string name="gmail">user_name</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="user_puser">User Puser</string>
    <string name="phone_number">+7**********</string>
    <string name="zabilparol">Забыли пароль?</string>
    <string name="Choose_subject">Выбор предмета</string>
    <string name="personal_data">Личные данные</string>
    <string name="rofl_chat">Рофл-чат</string>
    <string name="Input_text_message">Введите сообщение</string>
    <string name="message_in_rofl_chat">Сообщение</string>
    <string name="account_text">Аккаунт</string>
    <string name="mathSubjectLayout">Математика</string>
    <string name="registration">Регистрация</string>
    <string name="parol_padtverditie">Подтвердите пароль</string>
    <string name="RoleTeacherOrNot">Роль</string>
    <string-array name="Choose_subject_spinner_text">
        <item>Математика</item>
        <item>Русский язык</item>
        <item>Китайский язык</item>
        <item>ОБиЗР</item>
        <item>Литература</item>
        <item>Немецкий язык</item>
        <item>География</item>
        <item>Информатика</item>
        <item>Биология</item>
        <item>Физика</item>
        <item>Обществознание</item>
        <item>История</item>
        <item>Химия</item>
    </string-array>
    <string-array name="Choose_account_spinner_text">
        <item>Аккаунт1</item>
        <item>Аккаунт2</item>
        <item>Аккаунт3</item>
        <item>Аккаунт4</item>
        <item>Аккаунт5</item>
    </string-array>
    <string-array name="TeacherOrNot">
        <item>Учитель</item>
        <item>Ученик</item>
    </string-array>
</resources>