<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/loginFragment"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#FFB7CD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ExtraText" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#FFB7CD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText" />

    <LinearLayout
        android:id="@+id/okno"
        android:layout_width="390dp"
        android:layout_height="445dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:background="#FFD0E5"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="0dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="46dp"
            android:text="@string/reg_vxod_kringe"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/login_to_vxod"
            app:layout_constraintEnd_toEndOf="@id/okno"
            app:layout_constraintStart_toStartOf="@id/okno"
            app:layout_constraintTop_toTopOf="@+id/okno" />

        <EditText
            android:id="@+id/login_to_vxod"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/log_bykvi"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHighlight="#090909"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/parol_parol"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/parol"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/parolzabil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#00FFFFFF"
            android:text="@string/zabilparol"
            android:textColor="#C62BFF"
            android:textSize="16sp"
            app:cornerRadius="0dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/otmena_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/otmena"
        android:textColor="#000000"
        android:textColorLink="@color/white"
        android:textSize="32sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/okno"
        app:layout_constraintEnd_toStartOf="@+id/okei"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/okei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/ok"
        android:textSize="32sp"
        android:textColor="#000000"
        android:textColorLink="@color/white"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/otmena_reg"
        app:layout_constraintTop_toTopOf="@+id/otmena_reg" />

</androidx.constraintlayout.widget.ConstraintLayout>