<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ChatFragment"
    android:id="@+id/chatFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_chat"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="18dp"
        android:background="#FFB7CD"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText,MissingConstraints">

        <ImageButton
            android:id="@+id/back_roflchat_to_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            app:tint="#000000"
            android:contentDescription="back"
            android:src="?attr/homeAsUpIndicator"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/rofl_chat"
            android:text="@string/rofl_chat"
            android:textColor="@color/black"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="28dp" />
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="547dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_chat"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/message"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="275dp"
            android:text="@string/message_in_rofl_chat"
            android:textSize="22dp"/>

        <MultiAutoCompleteTextView
            android:id="@+id/multiAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Input_text_message"
            android:textColor="@color/black"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            android:layout_gravity="bottom"
            android:layout_marginTop="70dp"
            android:textSize="22dp" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView_chat"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#FFB7CD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_chat"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/home_chat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="-139dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:src="@drawable/icon_home"
            app:strokeColor="#000000"
            tools:ignore="ExtraText" />

        <ImageButton
            android:id="@+id/search_chat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/search"
            android:src="@drawable/icon__search"
            app:strokeColor="#000000"
            tools:ignore="ExtraText" />

        <ImageButton
            android:id="@+id/flow_chat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="139dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:src="@drawable/icon_flow"
            app:strokeColor="#000000"
            tools:ignore="ExtraText" />

        <View
            android:id="@+id/view_chat"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="#56F6216C" />


    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>