<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    tools:context=".MathSubjectsFragment"
    android:id="@+id/mathSubjectsFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view_mathSubject"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="25dp"
        android:background="#FFB7CD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ExtraText">

        <ImageButton
            android:id="@+id/home_mathSubject"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="-139dp"
            android:layout_marginLeft="-139dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:src="@drawable/icon_home"
            app:strokeColor="#000000"
            tools:ignore="ExtraText" />

        <ImageButton
            android:id="@+id/search_mathSubject"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/search"
            android:src="@drawable/icon__search"
            app:strokeColor="#000000"
            tools:ignore="ExtraText" />

        <ImageButton
            android:id="@+id/flow_mathSubject"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="139dp"
            android:layout_marginLeft="139dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:src="@drawable/icon_flow"
            app:strokeColor="#000000"
            tools:ignore="ExtraText" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_mathSubject"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="18dp"
        android:background="#FFB7CD"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText,MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/mathSubjectLayout"
            android:textColor="@color/black"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="28dp" />

        <ImageButton
            android:id="@+id/back_mathSubject_to_subject"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:contentDescription="back"
            android:src="?attr/homeAsUpIndicator"
            app:tint="#000000"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="16dp" />

    </androidx.appcompat.widget.Toolbar>

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical" />-->
<!--    </ScrollView>-->


</androidx.constraintlayout.widget.ConstraintLayout>